--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -67,30 +67,29 @@
     <h1>Free Calculators - <i class="fa fa-bar-chart"></i></h1>
     <hr />
     <div class="row">
-      <div class="col-12 col-md my-1 text-center">
+      <div class="col-6 col-md my-1 text-center">
         <a title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome" routerLinkActive="active"><img
             src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
         <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome"
           routerLinkActive="active">Retirement
-          Income Calculator</a>
+          Income</a>
       </div>
-      <div class="col-12 col-md my-1 text-center">
+      <div class="col-6 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
           routerLinkActive="active"><img src="assets/Covered-Call-ETF-Income-Calculator.png" class="img-fluid rounded"
             alt="Covered Call ETF Income Calculator" />
         </a>
         <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active">Covered Call ETF
-          Calculator</a>
+          routerLinkActive="active">Covered Call ETF</a>
       </div>
-      <div class="col-12 col-md my-1 text-center">
+      <div class="col-6 col-md my-1 text-center">
         <a title="Mortgage Payment Calculator" routerLink="/Calculators/MortgagePayment" routerLinkActive="active"><img
             src="assets/mortgage-payment-calculator.jpg" class="img-fluid rounded" alt="Mortgage Payment Calculator" />
         </a>
         <a class="fs-4 text-white" title="Mortgage Payment Calculator" routerLink="/Calculators/MortgagePayment"
-          routerLinkActive="active">Mortgage Payment Calculator</a>
+          routerLinkActive="active">Mortgage Payment</a>
       </div>
     </div>
   </div>
@@ -100,18 +99,18 @@
     <h1>Web Applications - <i class="fa fa-bar-chart"></i></h1>
     <hr />
     <div class="row">
-      <div class="col-12 col-md my-1 text-center">
-        <a target="_blank" title="OptionsLogger.com" href="https://optionslogger.com"><img src="assets/ol.jpg"
-            class="img-fluid rounded" alt="OptionsLogger.com" />
+      <div class="col-6 col-md my-1 text-center">
+        <a class="text-white" target="_blank" title="OptionsLogger.com" href="https://optionslogger.com"><img
+            src="assets/ol.jpg" class="img-fluid rounded " alt="OptionsLogger.com" />
         </a>
-        <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
+        <a class="fs-5 text-white" target="_blank" title="OptionsLogger.com"
           href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
-      <div class="col-12 col-md my-1 text-center">
+      <div class="col-6 col-md my-1 text-center">
         <a target="_blank" title="BudgetLogger.com" href="https://budgetlogger.com"><img src="assets/budget-logger.jpg"
             class="img-fluid rounded" alt="BudgetLogger.com" />
         </a>
-        <a target="_blank" class="fs-4 text-white" title="BudgetLogger.com"
+        <a target="_blank" class="fs-5 text-white" title="BudgetLogger.com"
           href="https://budgetlogger.com">BudgetLogger.com</a>
       </div>
       <!-- <div class="col-12 col-md my-1 text-center">
