--- a/src/app/covered-call-calculator/covered-call-calculator.component.html
+++ b/src/app/covered-call-calculator/covered-call-calculator.component.html
@@ -34,7 +34,7 @@
         </ul>
     </div>
     <hr /> -->
-    <h2>Covered Call ETF Income Calculator</h2>
+    <h2>Covered Call ETF Calculator</h2>
     <p>The form below contains Four Covered Call ETFs to select from ($QYLD, $QYLG, $XYLD, $XYLG, $RYLD). Once you have
         selected the desired ETF, then select the hypothetical Investment Amount ($100 - $1,000,000). Yields may be
         outdated, please visit <a href="https://www.globalxetfs.com/">Global X</a> for an updated yield amount.
