--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -77,6 +77,13 @@
           Income</a>
       </div>
       <div class="col-6 col-md my-1 text-center">
+        <a title="Portfolio Income Calculator" routerLink="/Calculators/PortfolioIncome" routerLinkActive="active"><img
+            src="assets/mortgage-payment-calculator.jpg" class="img-fluid rounded" alt="Portfolio Income Calculator" />
+        </a>
+        <a class="fs-4 text-white" title="Portfolio Income Calculator" routerLink="/Calculators/PortfolioIncome"
+          routerLinkActive="active">Portfolio Income</a>
+      </div>
+      <div class="col-6 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
           routerLinkActive="active"><img src="assets/Covered-Call-ETF-Income-Calculator.png" class="img-fluid rounded"
             alt="Covered Call ETF Income Calculator" />
