--- a/src/app/portfolio-income-calculator/portfolio-income-calculator.component.html
+++ b/src/app/portfolio-income-calculator/portfolio-income-calculator.component.html
@@ -59,8 +59,8 @@
                         <div class="col-xs-1-12 p-5">
                             <div class="card">
                                 <div class="card-body">
-                                    <h3 class="card-title">Portfolio Income</h3>
-                                    <p class="card-text" *ngIf="portfolioIncome > 0">
+                                    <h3 class="card-title">Annual Income</h3>
+                                    <p class="card-text">
                                         {{ portfolioIncome | currency:'USD':'symbol':'1.0' }}
                                     </p>
                                 </div>
@@ -72,7 +72,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h3 class="card-title">Monthly Income:</h3>
-                                    <p class="card-text" *ngIf="portfolioIncome > 0">
+                                    <p class="card-text">
                                         {{ portfolioIncome/12 | currency:'USD':'symbol':'1.0' }}
                                     </p>
                                 </div>
@@ -85,7 +85,6 @@
     </div>
     <hr />
     <div class="row">
-        <span class="col-12 text-center" style="font-size:12px;">*Disclaimer: Assumed investments are tax deferred.
-            (Roth
-            IRA, Roth 401k & Roth TSP). Fees or inflation are not included in calculation.*</span>
+        <span class="col-12 text-center" style="font-size:12px;">*Disclaimer: Assumed income does not include additional
+            taxes or fees that the investor may occur.*</span>
     </div>
