--- a/src/app/portfolio-income-calculator/portfolio-income-calculator.component.html
+++ b/src/app/portfolio-income-calculator/portfolio-income-calculator.component.html
@@ -10,19 +10,39 @@
                         <div class="row">
                             <div class="col text-center">
                                 <div class="form-group form-group-lg my-3">
-                                    <label class="form-label fs-4">Portfolio Balance:</label>
-                                    <input #portfolioBalance name="portfolioBalance" type="tel"
+                                    <label class="form-label fs-3">Portfolio Balance:</label>
+                                    <!-- <input #portfolioBalance name="portfolioBalance" type="tel"
                                         style="text-align:center;width: 75%; margin: auto; margin-bottom: 5px;"
                                         class="form-control input-lg text-center mt-1"
                                         value="{{ portfolioBalance.value | currency:'USD':'symbol':'3.0'}}"
-                                        (change)="processKeyup(portfolioBalance.value, incomeYield.value)">
+                                        (change)="processKeyup(portfolioBalance.value, incomeYield.value)"> -->
+                                        <select #portfolioBalance (change)="processKeyup(portfolioBalance.value, incomeYield.value)"
+                                        class="form-select text-center mt-1 input-lg"
+                                        style="width: 75%; margin: auto; margin-bottom: 5px;">
+                                        <option></option>    
+                                        <option value="10000">$10,000</option>
+                                            <option value="25000">$25,000</option>
+                                            <option value="50000">$50,000</option>
+                                            <option value="75000">$75,000</option>
+                                            <option value="100000">$100,000</option>
+                                            <option value="250000">$250,000</option>
+                                            <option value="500000">$500,000</option>
+                                            <option value="750000">$750,000</option>
+                                            <option value="1000000">$1,000,000</option>
+                                            <option value="1500000">$1,500,000</option>
+                                            <option value="2000000">$2,000,000</option>
+                                            <option value="2500000">$2,500,000</option>
+                                            <option value="3000000">$3,000,000</option>
+                                            <option value="5000000">$5,000,000</option>
+                                            <option value="10000000">$10,000,000</option>
+                                        </select>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-12 py-5">
                             <div class="form-group form-group-lg">
-                                <label class="form-label fs-4">Portfolio Yield:</label>
+                                <label class="form-label fs-3">Portfolio Yield:</label>
                                 <select #incomeYield name="yield"
                                     (change)="processKeyup(portfolioBalance.value, incomeYield.value)"
                                     class="form-select text-center mt-1 input-lg"
@@ -68,7 +88,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xs-1-12 p-5">
+                        <div class="col-xs-1-12 p-5 pt-4">
                             <div class="card">
                                 <div class="card-body">
                                     <h3 class="card-title">Monthly Income:</h3>
