--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
         alt="logo" style="width:75px; border-radius: 50%;" /></a>
 
     <h5 class="m-2"><a title="Follow @StackDividends"
-        href="https://twitter.com/StackDividends?ref_src=twsrc%5Etfw">@StackDividends</a></h5>
+        href="https://twitter.com/StackDividends?ref_src=twsrc%5Etfw"><Script></Script>tackDividends</a></h5>
 
     <!-- <a class="fs-3" routerLink="/">Cashflow Dividends</a> -->
     <div class="dropdown ms-auto">
