--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,67 +1,4 @@
 <div class="container mt-3 bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
-  <div class="row my-2">
-    <h1>Recommended eBooks - <i class="fa fa-book"></i></h1>
-    <hr />
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img src="assets/too-much-money-ebook.jpg"
-          class="img-fluid rounded" title="Too Much Money" alt="Too Much Money" /></a>
-      <a target="_blank" class="text-white mt-2" title="Too Much Money" href="https://gumroad.com/a/707294323/CSdwG">Too
-        Much Money</a>
-    </div>
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img
-          src="assets/turbo-divs.jpg" class="img-fluid rounded" alt="Turbocharge Your Dividends" />
-      </a>
-      <a target="_blank" class="text-white mt-2" href="https://gumroad.com/a/304280691/DHxdC"
-        title="Turbocharge Your Dividends">Turbocharge Your Dividends</a>
-    </div>
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" title="Get Paid While You Wait" href="https://gumroad.com/a/304280691/yjPAg"><img
-          src="assets/get-paid-while-you-wait.jpg" class="img-fluid rounded" alt="Get Paid While You Wait" />
-      </a>
-      <a target="_blank" class="text-white mt-2" href="https://gumroad.com/a/304280691/yjPAg"
-        title="Get Paid While You Wait">Get Paid While You Wait</a>
-    </div>
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" title="10 Forever Dividend Stocks" href="https://gumroad.com/a/707294323/geCIq"><img
-          src="assets/10-forever-dividend-stocks-1.jpg" class="img-fluid rounded" alt="10 Forever Dividend Stocks" />
-      </a>
-      <a target="_blank" class="text-white mt-2" href="https://gumroad.com/a/707294323/geCIq"
-        title="10 Forever Dividend Stocks">10 Forever Dividend Stocks</a>
-    </div>
-  </div>
-  <div class="row my-1 d-none">
-    <h1>Recommended Brokers - <i class="fa fa fa-line-chart"></i></h1>
-    <hr />
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" href="https://personal1.vanguard.com/mmx-move-money/welcome"><img
-          src="assets/vanguard-logo.jpg" title="Open a Brokerage Account with Vanguard" class="img-fluid rounded"
-          alt="Open a Brokerage Account with Vanguard" /></a>
-      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Vanguard"
-        href="https://personal1.vanguard.com/mmx-move-money/welcome">Vanguard</a>
-    </div>
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" href="https://www.fidelity.com/open-account/overview"><img src="assets/fidelity-logo.jpg"
-          title="Open a Brokerage Account with Fidelity" class="img-fluid rounded"
-          alt="Open a Brokerage Account with Fidelity" /></a>
-      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Fidelity"
-        href="https://www.fidelity.com/open-account/overview">Fidelity</a>
-    </div>
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" href="http://join.robinhood.com/zacharc396"><img src="assets/rh-logo.jpg"
-          title="Open a Brokerage Account with Robinhood" class="img-fluid rounded"
-          alt="Open a Brokerage Account with Robinhood" /></a>
-      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Robinhood"
-        href="http://join.robinhood.com/zacharc396">Robinhood</a>
-    </div>
-    <div class="col-6 col-md-3 my-1 text-center">
-      <a target="_blank" href="https://crypto.com/"><img src="assets/crypto-logo.jpg"
-          title="Open a Brokerage Account with Crypto.com" class="img-fluid rounded"
-          alt="Open a Brokerage Account with Crypto.com" /></a>
-      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Robinhood"
-        href="https://crypto.com/">Crypto.com</a>
-    </div>
-  </div>
   <hr class="d-none" />
   <div class="row my-1 my-md-3">
     <h1>Web Applications / Calculators - <i class="fa fa-bar-chart"></i></h1>
@@ -178,9 +115,7 @@
     </div>
   </div>
   <hr style="display:none;" />
-  <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
-    contain affiliate links where the website owner may receive a small affiliate commission for recommending the
-    product. I am not a financial advisor, the information provided throughout this website is desinged to be used
+  <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em>I am not a financial advisor, the information provided throughout this website is desinged to be used
     for educational purposes only. Do your own reseach before investing, seek financial advice from a certified
     financial advisor if needed.*
   </p>
