--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~bootstrap/scss/bootstrap';
-@import '~font-awesome/scss/font-awesome';
+@import "../node_modules/bootstrap/scss/bootstrap";
 
 
 label {
