code updates, project build

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -3,7 +3,7 @@
   <div class="row my-1 my-md-3">
     <h1>Web Applications / Calculators - <i class="fa fa-bar-chart"></i></h1>
     <hr />
-    <div class="row">
+    <div class="row" style="min-height: 50vh;">
       <div class="col-6 col-md my-1 text-center">
         <a title="Retirement Income Calculator" routerLink="Calculators/RetirementIncome" routerLinkActive="active"><img
             src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
@@ -34,20 +34,6 @@
         </a>
         <a class="fs-4 text-white" title="Mortgage Payment Calculator" routerLink="/Calculators/MortgagePayment"
           routerLinkActive="active">Mortgage Payment</a>
-      </div>
-      <div class="col-6 col-md-3 my-1 my-md-3 text-center">
-        <a target="_blank" title="BudgetLogger.com" href="https://budgetlogger.com"><img src="assets/budget-logger.jpg"
-            class="img-fluid rounded" alt="BudgetLogger.com" />
-        </a>
-        <a target="_blank" class="fs-5 text-white" title="BudgetLogger.com"
-          href="https://budgetlogger.com">BudgetLogger.com</a>
-      </div>
-      <div class="col-6 col-md-3 my-1 my-md-3 text-center">
-        <a class="text-white" target="_blank" title="OptionsLogger.com" href="https://optionslogger.com"><img
-            src="assets/ol.jpg" class="img-fluid rounded " alt="OptionsLogger.com" />
-        </a>
-        <a class="fs-5 text-white" target="_blank" title="OptionsLogger.com"
-          href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
     </div>
   </div>
