--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3 bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
   <hr class="d-none" />
   <div class="row my-1 my-md-3">
-    <h1>Web Applications / Calculators - <i class="fa fa-bar-chart"></i></h1>
+    <h1>Web Calculators - <i class="fa fa-bar-chart"></i></h1>
     <hr />
     <div class="row" style="min-height: 50vh;">
       <div class="col-6 col-md my-1 text-center">
