--- a/src/app/retirement-income/retirement-income.component.html
+++ b/src/app/retirement-income/retirement-income.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-black shawdow-lg rounded p-2" style="min-height:491px;">
+<div class="container mt-3 bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
   <h1>Retirement Income Calculator</h1>
   <hr />
   <div class="row text-center">
