--- a/src/app/covered-call-calculator/covered-call-calculator.component.html
+++ b/src/app/covered-call-calculator/covered-call-calculator.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-black shawdow-lg p-2" style="min-height:491px;">
+<div class="container mt-3 bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
     <!-- <h1>Monthly Covered Call ETFs</h1>
     <div class="text-white">
         <hr style="background:white; height:2px;" />
